# sync-ostree-to-containers

./: Cargo.toml  README.md
src/: main.rs
