[package]
name = "sync-ostree-to-containers"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
camino = "1.0.9"
clap = { version = "3.2.16", features = ["derive"] }
once_cell = "1.13.0"
tempfile = "3.3.0"
